# ohmnivore

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.docs/: TODO.md
.docs/plans/: 2026-02-13-bjt-mosfet-design.md
bench/: generate_chain.py  run_benchmark.sh
docs/: analyses.md  installation.md  netlist-format.md  solver-reference.md
examples/: common_source.spice  diode_clamp.spice  pulse_filter.spice  rc_charging.spice  rc_lowpass.spice  voltage_divider.spice
src/: compiler.rs  error.rs  ir.rs  lib.rs  main.rs  output.rs  parser.rs  sparse.rs  stats.rs
src/analysis/: ac.rs  dc.rs  mod.rs  transient.rs  transient_source.rs
src/solver/: backend.rs  bicgstab.rs  comm.rs  comm_mpi.rs  cpu.rs  distributed_bicgstab.rs  distributed_newton.rs  distributed_preconditioner.rs  ds_backend.rs  ds_nonlinear_shaders.rs  ds_shaders.rs  gpu.rs  gpu_shaders.rs  mod.rs  newton.rs  nonlinear.rs  partition.rs  preconditioner.rs  sparse_direct.rs
tests/: diode_integration_test.rs  distributed_test.rs  gpu_integration_test.rs  integration_test.rs  regression_test.rs  transient_integration_test.rs  transistor_integration_test.rs
tests/fixtures/: voltage_divider.spice
tests/regression/: compare.rs  manifest.toml  mod.rs  ngspice.rs
tests/regression/circuits/: cmos_inverter_chain_dc.spice  cmos_inverter_chain_tran.spice  current_source_resistor.spice  diode_forward.spice  nmos_common_source.spice  npn_common_emitter.spice  rc_lowpass.spice  tran_pulse_rc_filter.spice  tran_rc_charging.spice  tran_rl_step.spice  voltage_divider.spice
