[package]
name = "ohmnivore"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "8"
num-complex = "0.4"
wgpu = "28"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
rayon = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metis-rs = "0.1"
mpi = { version = "0.8", optional = true }
faer = { version = "0.24", default-features = false, features = ["std", "sparse-linalg"] }

[features]
ngspice-compare = []
distributed = ["mpi"]

[dev-dependencies]
approx = "0.5"
naga = { version = "28", features = ["wgsl-in"] }
toml = "1"
serde = "1"
serde_derive = "1"
